--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Excel to endorsementData.js (AUTO)</title>
+  <title>Excel → endorsementData.js</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
     <div class="card">
       <h1>📌 Excel (.xlsx) → endorsementData.js (AUTO Headers)</h1>
-      <p>Excel upload karo → tool headers ko auto match karega → output exact <b>endorsementData.js</b> format me milega.</p>
+      <p>Excel upload karo → output exact endorsementData.js format me milega.</p>
 
       <div class="row">
         <input type="file" id="fileInput" accept=".xlsx" />
@@ -23,7 +23,7 @@
       <div class="small" id="status">Ready.</div>
       <div class="barWrap"><div class="bar" id="bar"></div></div>
 
-      <div class="grid" style="margin-top:14px;">
+      <div class="grid">
         <div>
           <h3 class="title">📥 Excel Preview</h3>
           <textarea id="preview" readonly placeholder="Preview will appear here..."></textarea>
@@ -37,10 +37,7 @@
     </div>
   </div>
 
-  <!-- SheetJS (Excel Reader) -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-
-  <!-- Your JS -->
   <script src="script.js"></script>
 </body>
 </html>
